Testing: Client Service Test | Test 1: Updated GetAllClientsEmptyTest (#5)